--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-
+    <link rel="icon" type="image/x-icon" href="https://res.cloudinary.com/dqcukddwu/image/upload/v1709020491/favicon_nq0hes.png">
     <title>Infraqube - Co-Working Space in Coimbatore</title>
 
     <!-- Bootstrap core CSS -->
@@ -116,22 +116,22 @@ https://templatemo.com/tm-591-villa-agency
     <div class="main-banner">
       <div class="owl-carousel owl-banner">
         <div class="item item-1">
-          <div class="header-text">
+          <!-- <div class="header-text">
             <span class="category">Toronto, <em>Canada</em></span>
             <h2>Hurry!<br />Get the Best Villa for you</h2>
-          </div>
+          </div> -->
         </div>
         <div class="item item-2">
-          <div class="header-text">
+          <!-- <div class="header-text">
             <span class="category">Melbourne, <em>Australia</em></span>
             <h2>Be Quick!<br />Get the best villa in town</h2>
-          </div>
+          </div> -->
         </div>
         <div class="item item-3">
-          <div class="header-text">
+          <!-- <div class="header-text">
             <span class="category">Miami, <em>South Florida</em></span>
             <h2>Act Now!<br />Get the highest level penthouse</h2>
-          </div>
+          </div> -->
         </div>
       </div>
       <!--  -->
@@ -268,7 +268,7 @@ https://templatemo.com/tm-591-villa-agency
               <ul>
                 <li>
                   <img
-                    src="assets/images/info-icon-01.png"
+                    src="https://res.cloudinary.com/dqcukddwu/image/upload/v1715246354/icons/info-icon-01_tqhgkg.png"
                     alt=""
                     style="max-width: 52px"
                   />
@@ -276,7 +276,7 @@ https://templatemo.com/tm-591-villa-agency
                 </li>
                 <li>
                   <img
-                    src="assets/images/info-icon-02.png"
+                    src="https://res.cloudinary.com/dqcukddwu/image/upload/v1715246355/icons/info-icon-02_bmwp6k.png"
                     alt=""
                     style="max-width: 52px"
                   />
@@ -284,7 +284,7 @@ https://templatemo.com/tm-591-villa-agency
                 </li>
                 <li>
                   <img
-                    src="assets/images/info-icon-03.png"
+                    src="https://res.cloudinary.com/dqcukddwu/image/upload/v1715246356/icons/info-icon-03_l1krur.png"
                     alt=""
                     style="max-width: 52px"
                   />
@@ -292,7 +292,7 @@ https://templatemo.com/tm-591-villa-agency
                 </li>
                 <li>
                   <img
-                    src="assets/images/info-icon-04.png"
+                    src="https://res.cloudinary.com/dqcukddwu/image/upload/v1715246352/icons/info-icon-04_koogvx.png"
                     alt=""
                     style="max-width: 52px"
                   />
@@ -659,7 +659,7 @@ https://templatemo.com/tm-591-villa-agency
               <div class="col-lg-6">
                 <div class="item phone">
                   <img
-                    src="assets/images/phone-icon.png"
+                    src="https://res.cloudinary.com/dqcukddwu/image/upload/v1715246352/icons/phone-icon_vwrzp3.png"
                     alt=""
                     style="max-width: 52px"
                   />
@@ -669,7 +669,7 @@ https://templatemo.com/tm-591-villa-agency
               <div class="col-lg-6">
                 <div class="item email">
                   <img
-                    src="assets/images/email-icon.png"
+                    src="https://res.cloudinary.com/dqcukddwu/image/upload/v1715246353/icons/email-icon_tn0asb.png"
                     alt=""
                     style="max-width: 52px"
                   />
@@ -707,7 +707,7 @@ https://templatemo.com/tm-591-villa-agency
                     />
                   </fieldset>
                 </div>
-                <div class="col-lg-12">
+                <!-- <div class="col-lg-12">
                   <fieldset>
                     <label for="subject">Subject</label>
                     <input
@@ -718,7 +718,7 @@ https://templatemo.com/tm-591-villa-agency
                       autocomplete="on"
                     />
                   </fieldset>
-                </div>
+                </div> -->
                 <div class="col-lg-12">
                   <fieldset>
                     <label for="message">Message</label>
