--- a/properties.html
+++ b/properties.html
@@ -88,7 +88,11 @@ https://templatemo.com/tm-591-villa-agency
             <nav class="main-nav">
               <!-- ***** Logo Start ***** -->
               <a href="index.html" class="logo">
-                <h1>Villa</h1>
+                <img
+                  class=""
+                  src="https://res.cloudinary.com/dqcukddwu/image/upload/v1709020492/iq_logo_png_xfngpj.png"
+                  alt=""
+                />
               </a>
               <!-- ***** Logo End ***** -->
               <!-- ***** Menu Start ***** -->
