--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper@7/swiper-bundle.min.css"
     />
-    
+
   </head>
 
   <body>
@@ -89,8 +89,8 @@
               <!-- ***** Menu Start ***** -->
               <ul class="nav">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="properties.html">About us</a></li>
-                <li><a href="property-details.html">Products </a></li>
+                <li><a href="#aboutus">About us</a></li>
+                <li><a href="#products">Products </a></li>
                 <!-- <li><a href="contact.html">Contact Us</a></li> -->
                 <li>
                   <a href="#"><i class="fa-solid fa-phone"></i> Contact us</a>
@@ -151,7 +151,7 @@
               /></a>
             </div>
           </div>
-          <div class="col-lg-5">
+          <div class="col-lg-5" id="aboutus">
             <div class="section-heading">
               <h6>| About US</h6>
               <h2>INFRAQUBE - YOUR SUCCESS IS OURS</h2>
@@ -523,7 +523,7 @@
     <div class="properties section">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 offset-lg-4">
+          <div class="col-lg-4 offset-lg-4" id="products">
             <div class="section-heading text-center">
               <h6>| Properties</h6>
               <h2>We Provide The Best Property You Like</h2>
