--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
                     alt=""
                     style="max-width: 52px"
                   />
-                  <h6>010-020-0340<br /><span>Phone Number</span></h6>
+                  <h6>+91-9169269269<br /><span>Phone Number</span></h6>
                 </div>
               </div>
               <div class="col-lg-6">
@@ -667,7 +667,7 @@
                     alt=""
                     style="max-width: 52px"
                   />
-                  <h6>info@villa.co<br /><span>Business Email</span></h6>
+                  <h6>info@infraqube.com<br /><span>Business Email</span></h6>
                 </div>
               </div>
             </div>
