--- a/index.html
+++ b/index.html
@@ -745,11 +745,7 @@
       <div class="container">
         <div class="col-lg-8">
           <p>
-            Copyright © 2048 Villa Agency Co., Ltd. All rights reserved. Design:
-            <a rel="nofollow" href="https://templatemo.com" target="_blank"
-              >TemplateMo</a
-            >
-            Distribution: <a href="https://themewagon.com">ThemeWagon</a>
+            Copyright © 2024 Infraqube:
           </p>
         </div>
       </div>
