--- a/index.html
+++ b/index.html
@@ -743,9 +743,9 @@
 
     <footer>
       <div class="container">
-        <div class="col-lg-8">
-          <p>
-            Copyright © 2024 Infraqube:
+        <div class="col-lg-12">
+          <p >
+            Copyright © 2024 Infraqube
           </p>
         </div>
       </div>
