--- a/index.html
+++ b/index.html
@@ -143,12 +143,12 @@
           <div class="col-lg-4">
             <div class="left-image">
               <img src="assets/images/featured.jpg" alt="" />
-              <a href="property-details.html"
+              <!-- <a href="#"
                 ><img
                   src="assets/images/featured-icon.png"
                   alt=""
                   style="max-width: 60px; padding: 0px"
-              /></a>
+              /></a> -->
             </div>
           </div>
           <div class="col-lg-5" id="aboutus">
@@ -421,7 +421,7 @@
                           desk.
                         </p>
                         <div class="icon-button">
-                          <a href="property-details.html"
+                          <a href="#"
                             ><i class="fa fa-calendar"></i> Schedule a visit</a
                           >
                         </div>
@@ -465,7 +465,7 @@
                           choice.
                         </p>
                         <div class="icon-button">
-                          <a href="property-details.html"
+                          <a href="#"
                             ><i class="fa fa-calendar"></i> Schedule a visit</a
                           >
                         </div>
@@ -505,7 +505,7 @@
                           contact us for more details.
                         </p>
                         <div class="icon-button">
-                          <a href="property-details.html"
+                          <a href="#"
                             ><i class="fa fa-calendar"></i> Schedule a visit</a
                           >
                         </div>
@@ -533,7 +533,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6">
             <div class="item">
-              <a href="property-details.html"
+              <a href="#"
                 ><img src="assets/images/property-01.jpg" alt=""
               /></a>
               <span class="category">Individual Office</span>
@@ -549,13 +549,13 @@
                 <li>Parking: <span>6 spots</span></li>
               </ul>
               <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
+                <a href="#">Schedule a visit</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="item">
-              <a href="property-details.html"
+              <a href="#"
                 ><img src="assets/images/property-02.jpg" alt=""
               /></a>
               <span class="category">Shared Space</span>
@@ -571,13 +571,13 @@
                 <li>Parking: <span>8 spots</span></li>
               </ul>
               <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
+                <a href="#">Schedule a visit</a>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="item">
-              <a href="property-details.html"
+              <a href="#"
                 ><img src="assets/images/property-03.jpg" alt=""
               /></a>
               <span class="category">Virtual Space</span>
@@ -592,7 +592,7 @@
                 <li>Parking: <span>10 spots</span></li>
               </ul>
               <div class="main-button">
-                <a href="property-details.html">Schedule a visit</a>
+                <a href="#">Schedule a visit</a>
               </div>
             </div>
           </div>
