--- a/index.html
+++ b/index.html
@@ -143,12 +143,11 @@
           <div class="col-lg-4">
             <div class="left-image">
               <img src="assets/images/featured.jpg" alt="" />
-              <!-- <a href="#"
-                ><img
+              <p><img
                   src="assets/images/featured-icon.png"
                   alt=""
                   style="max-width: 60px; padding: 0px"
-              /></a> -->
+              /></p>
             </div>
           </div>
           <div class="col-lg-5" id="aboutus">
@@ -577,11 +576,10 @@
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="item">
-              <a href="#"
-                ><img src="assets/images/property-03.jpg" alt=""
-              /></a>
+              <img src="assets/images/property-03.jpg" alt=""
+              />
               <span class="category">Virtual Space</span>
-              <h6></h6>
+              <h6>Virtual</h6>
               <h4>
               </h4>
               <ul>
