--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
           <div class="col-lg-4 col-md-4">
             <ul class="social-links">
               <li>
+                <a href="https://www.instagram.com/infraqube/"><i class="fab fa-instagram"></i></a>
+              </li>
+              <li>
                 <a href="#"><i class="fab fa-facebook"></i></a>
               </li>
               <li>
@@ -62,9 +65,7 @@
               <li>
                 <a href="#"><i class="fab fa-linkedin"></i></a>
               </li>
-              <li>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-              </li>
+              
             </ul>
           </div>
         </div>
