--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-8">
             <ul class="info">
-              <li><i class="fa fa-envelope"></i> info@infraqube.com</li>
+              <li><i class="fa fa-envelope"></i> Infraqubeoffice@gmail.com</li>
               <!-- <li><i class="fa fa-map"></i> Sunny Isles Beach, FL 33160</li> -->
             </ul>
           </div>
@@ -94,7 +94,7 @@
                 <li><a href="#products">Products </a></li>
                 <!-- <li><a href="contact.html">Contact Us</a></li> -->
                 <li>
-                  <a href="#"><i class="fa-solid fa-phone"></i> Contact us</a>
+                  <a href="https://forms.gle/13cUdS286Na59EU5A"><i class="fa-solid fa-phone"></i> Contact us</a>
                 </li>
               </ul>
               <a class="menu-trigger">
@@ -143,7 +143,7 @@
         <div class="row">
           <div class="col-lg-4">
             <div class="left-image">
-              <img src="assets/images/featured.jpg" alt="" />
+              <img src="assets/images/About_us.jpg" alt="Best co-working space" />
               <p><img
                   src="assets/images/featured-icon.png"
                   alt=""
@@ -282,7 +282,7 @@
                     alt=""
                     style="max-width: 52px"
                   />
-                  <h4>Key Features<br /><span>Flexi Payment plans</span></h4>
+                  <h4>Key Features<br /><span>Flexi-Payment plans</span></h4>
                 </li>
                 <li>
                   <img
@@ -405,7 +405,7 @@
                         </div>
                       </div>
                       <div class="col-lg-6">
-                        <img src="assets/images/deal-01.jpg" alt="" />
+                        <img src="assets/images/Co_Working.jpg" alt="best co-working space in Coimbatore" />
                       </div>
                       <div class="col-lg-3">
                         <h4>Coworking</h4>
@@ -421,8 +421,8 @@
                           desk.
                         </p>
                         <div class="icon-button">
-                          <a href="#"
-                            ><i class="fa fa-calendar"></i> Schedule a visit</a
+                          <a href="https://forms.gle/13cUdS286Na59EU5A"
+                            ><i class="fa fa-calendar"></i> Contact us </a
                           >
                         </div>
                       </div>
@@ -443,13 +443,13 @@
                             <li>Minimum SQFT <span>Any Size</span></li>
                             <li>Renovation Projects <span>Yes</span></li>
                             <li>
-                              Locations <span>Coimbatore,Salem,Chennai</span>
+                              Locations <span>Coimbatore,<br/>Salem,Chennai</span>
                             </li>
                           </ul>
                         </div>
                       </div>
                       <div class="col-lg-6">
-                        <img src="assets/images/deal-02.jpg" alt="" />
+                        <img src="assets/images/Enterprises.jpg" alt="Enterprises" />
                       </div>
                       <div class="col-lg-3">
                         <h4>Enterprises</h4>
@@ -465,8 +465,8 @@
                           choice.
                         </p>
                         <div class="icon-button">
-                          <a href="#"
-                            ><i class="fa fa-calendar"></i> Schedule a visit</a
+                          <a href="https://forms.gle/13cUdS286Na59EU5A"
+                            ><i class="fa fa-calendar"></i> Contact us </a
                           >
                         </div>
                       </div>
@@ -486,14 +486,12 @@
                             <li>Conference Rooms <span>Yes</span></li>
                             <li>Rental Type <span>Pre rental</span></li>
                             <li>Company Registrations<span>Yes</span></li>
-                            <li>
-                              Location <span>Coimbatore,Salem,Chennai</span>
-                            </li>
+                            <li>Location <span>Coimbatore,<br/>Salem,Chennai</span></li>
                           </ul>
                         </div>
                       </div>
                       <div class="col-lg-6">
-                        <img src="assets/images/deal-03.jpg" alt="" />
+                        <img src="assets/images/Virtual_space.jpg" alt="Virtual space" />
                       </div>
                       <div class="col-lg-3">
                         <h4>Virtual Space</h4>
@@ -505,8 +503,8 @@
                           contact us for more details.
                         </p>
                         <div class="icon-button">
-                          <a href="#"
-                            ><i class="fa fa-calendar"></i> Schedule a visit</a
+                          <a href="https://forms.gle/13cUdS286Na59EU5A"
+                            ><i class="fa fa-calendar"></i> Contact us </a
                           >
                         </div>
                       </div>
@@ -549,7 +547,7 @@
                 <li>Parking: <span>6 spots</span></li>
               </ul>
               <div class="main-button">
-                <a href="#">Schedule a visit</a>
+                <a href="#">Contact us </a>
               </div>
             </div>
           </div>
@@ -571,7 +569,7 @@
                 <li>Parking: <span>8 spots</span></li>
               </ul>
               <div class="main-button">
-                <a href="#">Schedule a visit</a>
+                <a href="#">Contact us </a>
               </div>
             </div>
           </div>
@@ -590,7 +588,7 @@
                 <li>Parking: <span>10 spots</span></li>
               </ul>
               <div class="main-button">
-                <a href="#">Schedule a visit</a>
+                <a href="#">Contact us </a>
               </div>
             </div>
           </div>
@@ -658,7 +656,7 @@
                     alt=""
                     style="max-width: 32px"
                   />
-                  <h6>info@infraqube.com<br /><span>Business Email</span></h6>
+                  <h6>Infraqubeoffice@gmail.com<br /><span>Business Email</span></h6>
                 </div>
               </div>
             </div>
