--- a/index.html
+++ b/index.html
@@ -516,17 +516,17 @@
               <a href="#"
                 ><img src="assets/images/Co_Working.jpg" alt=""
               /></a>
-              <span class="category">Individual Office</span>
-              <h6></h6>
+              <span class="category">Shared Office</span>
+              <h6>Rs.5500/-</h6>
               <h4>
-                  Gandhipuram, Coimbatore
+                  Peelamedu, Coimbatore
               </h4>
               <ul>
-                <li>Seaters: <span>8</span></li>
-                <li>Bathrooms: <span>8</span></li>
-                <li>Area: <span>545m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>6 spots</span></li>
+                <li>Seaters: <span>30+</span></li>
+                <li>Bathrooms: <span>3+</span></li>
+                <li>Area: <span>2000+sq.</span></li>
+                <li>Floor: <span>2</span></li>
+                <li>Parking: <span>Available</span></li>
               </ul>
               <div class="main-button">
                 <a href="#">Contact us </a>
@@ -539,15 +539,15 @@
                 ><img src="assets/images/Enterprises.jpg" alt=""
               /></a>
               <span class="category">Shared Space</span>
-              <h6>Rs.5000/-</h6>
+              <h6>Rs.5500/-</h6>
               <h4>
                 Saravanampatti, Coimbatore
               </h4>
               <ul>
-                <li>Seaters: <span>6</span></li>
-                <li>Bathrooms: <span>5</span></li>
-                <li>Area: <span>450m2</span></li>
-                <li>Floor: <span>3</span></li>
+                <li>Seaters: <span>30+</span></li>
+                <li>Bathrooms: <span>3+</span></li>
+                <li>Area: <span>2000+sq.</span></li>
+                <li>Floor: <span>2</span></li>
                 <li>Parking: <span>8 spots</span></li>
               </ul>
               <div class="main-button">
@@ -563,11 +563,11 @@
               <h6></h6>
               <h4>Virtual</h4>
               <ul>
-                <li>Seaters: <span>5</span></li>
-                <li>Bathrooms: <span>4</span></li>
-                <li>Area: <span>225m2</span></li>
-                <li>Floor: <span>3</span></li>
-                <li>Parking: <span>10 spots</span></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li>Location: <span>Coimbatore, Chennai, Selam</span></li>
               </ul>
               <div class="main-button">
                 <a href="#">Contact us </a>
@@ -644,7 +644,7 @@
             </div>
           </div>
           <div class="col-lg-5">
-            <form id="contact-form" action="" method="post">
+            <!-- <form id="contact-form" action="" method="post">
               <div class="row">
                 <div class="col-lg-12">
                   <fieldset>
@@ -672,18 +672,7 @@
                     />
                   </fieldset>
                 </div>
-                <!-- <div class="col-lg-12">
-                  <fieldset>
-                    <label for="subject">Subject</label>
-                    <input
-                      type="subject"
-                      name="subject"
-                      id="subject"
-                      placeholder="Subject..."
-                      autocomplete="on"
-                    />
-                  </fieldset>
-                </div> -->
+                
                 <div class="col-lg-12">
                   <fieldset>
                     <label for="message">Message</label>
@@ -706,7 +695,18 @@
                   </fieldset>
                 </div>
               </div>
-            </form>
+            </form> -->
+            <div>
+              <div class="card" style="width: 18rem;">
+                <div class="card-body">
+                  <h5 class="card-title">Contact us</h5>
+                  <p class="card-text">To book workspace on your need.</p>
+                  <div class="main-button">
+                     <a href="https://forms.gle/13cUdS286Na59EU5A"><i class="fa-solid fa-phone"></i> Enquire Now</a>  
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
