--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                 <li><a href="#products">Products </a></li>
                 <!-- <li><a href="contact.html">Contact Us</a></li> -->
                 <li>
-                  <a href="https://forms.gle/13cUdS286Na59EU5A"><i class="fa-solid fa-phone"></i> Contact us</a>
+                  <a href="https://surveyheart.com/form/678f419d21e42422fe77ad22"><i class="fa-solid fa-phone"></i> Contact us</a>
                 </li>
               </ul>
               <a class="menu-trigger">
@@ -403,7 +403,7 @@
                           desk.
                         </p>
                         <div class="icon-button">
-                          <a href="https://forms.gle/13cUdS286Na59EU5A"
+                          <a href="https://surveyheart.com/form/678f419d21e42422fe77ad22"
                             ><i class="fa fa-calendar"></i> Contact us </a
                           >
                         </div>
@@ -447,7 +447,7 @@
                           choice.
                         </p>
                         <div class="icon-button">
-                          <a href="https://forms.gle/13cUdS286Na59EU5A"
+                          <a href="https://surveyheart.com/form/678f419d21e42422fe77ad22"
                             ><i class="fa fa-calendar"></i> Contact us </a
                           >
                         </div>
@@ -485,7 +485,7 @@
                           contact us for more details.
                         </p>
                         <div class="icon-button">
-                          <a href="https://forms.gle/13cUdS286Na59EU5A"
+                          <a href="https://surveyheart.com/form/678f419d21e42422fe77ad22"
                             ><i class="fa fa-calendar"></i> Contact us </a
                           >
                         </div>
@@ -702,7 +702,7 @@
                   <h5 class="card-title">Contact us</h5>
                   <p class="card-text">To book workspace on your need.</p>
                   <div class="main-button">
-                     <a href="https://forms.gle/13cUdS286Na59EU5A"><i class="fa-solid fa-phone"></i> Enquire Now</a>  
+                     <a href="https://surveyheart.com/form/678f419d21e42422fe77ad22"><i class="fa-solid fa-phone"></i> Enquire Now</a>  
                   </div>
                 </div>
               </div>
