--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
       <div class="container">
         <div class="col-lg-12">
           <p >
-            Copyright © 2024 Infraqube
+            Copyright © 2024 Infraqube - 
           </p>
         </div>
       </div>
